manifests/deployment copy.yml
# deploy to usernode pool
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aad-app-deployment
  namespace: aad-app
  labels:
    app: aad-app
spec:
    replicas: 2
    selector:
      matchLabels:
        app: aad-app
    template:
      metadata:
        labels:
          app: aad-app
      spec:
        # nodeSelector:
        #  nodepool: userpool
        containers:
        - name: aad-app
          # Replace latest with the version in production
          image: vhacr1.azurecr.io/aad-app:latest
          # set image PullPolicy to Always to ensure that the latest image is pulled on deployment
          imagePullPolicy: Always
          
          securityContext:
            readonlyRootFilesystem: true
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          #  seLinuxOptions:

          resources:
            # 128Mi bytes of memory and 250 millicpu (1/4 cpu core)
            requests:
              memory: "128Mi"
              cpu: "250m"
            # 256Mi bytes of memory and 500 millicpu (1/2 cpu core)
            limits:
                memory: "256Mi"
                cpu: "500m"
          ports:
          - containerPort: 3000
