manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aad-app-service
  namespace: aad-app
spec:
  type: ClusterIP
  selector:
    app: aad-app
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
